fix: change all instances of MONTHS_TO_FORECAST to months_to_forecast

--- a/notebook_aws.ipynb
+++ b/notebook_aws.ipynb
@@ -114,7 +114,7 @@
         "tenant_name = bucket_name\n",
         "project_id = 2\n",
         "start_date = \"2023-01\"\n",
-        "MONTHS_TO_FORECAST = 12"
+        "months_to_forecast = 12"
       ]
     },
     {
