--- a/notebook_model.ipynb
+++ b/notebook_model.ipynb
@@ -48,7 +48,7 @@
       "outputs": [],
       "source": [
         "start_date = \"2023-01\"\n",
-        "MONTHS_TO_FORECAST = 12\n",
+        "months_to_forecast = 12\n",
         "IMTT = 0.01"
       ]
     },
@@ -1572,7 +1572,7 @@
         "        new_disbursements_df=new_disbursements_df,\n",
         "        disbursement_parameters=disbursement_parameters,\n",
         "        monthly_repayment_new_disbursements_df=monthly_repayment_new_disbursements_df,\n",
-        "        months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "        months_to_forecast=months_to_forecast,\n",
         "    )\n",
         ")\n",
         "loan_schedules_for_all_new_disbursements.keys()"
@@ -2096,7 +2096,7 @@
         "admin_fee_for_all_new_disbursements_df = other_income.calculate_admin_fee_for_all_new_disbursements(\n",
         "    new_disbursements_df=new_disbursements_df,\n",
         "    disbursement_parameters=disbursement_parameters,\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         ")\n",
         "\n",
         "admin_fee_for_all_new_disbursements_df"
@@ -2296,7 +2296,7 @@
         "credit_insurance_fee_for_all_new_disbursements_df = other_income.calculate_credit_insurance_fee_for_all_new_disbursements(\n",
         "        new_disbursements_df=new_disbursements_df,\n",
         "        disbursement_parameters=disbursement_parameters,\n",
-        "        months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "        months_to_forecast=months_to_forecast,\n",
         "    )\n",
         "\n",
         "credit_insurance_fee_for_all_new_disbursements_df"
@@ -6265,7 +6265,7 @@
       ],
       "source": [
         "capital_repayment_existing_loans = existing_loans_schedules['capital_repayments'].sum()\n",
-        "capital_repayment_existing_loans.loc[helper.generate_columns(start_date,MONTHS_TO_FORECAST)]"
+        "capital_repayment_existing_loans.loc[helper.generate_columns(start_date,months_to_forecast)]"
       ]
     },
     {
@@ -6305,7 +6305,7 @@
       ],
       "source": [
         "interest_income_existing_loans = existing_loans_schedules['interest_payments'].sum()\n",
-        "interest_income_existing_loans.loc[helper.generate_columns(start_date,MONTHS_TO_FORECAST)]"
+        "interest_income_existing_loans.loc[helper.generate_columns(start_date,months_to_forecast)]"
       ]
     },
     {
@@ -6480,7 +6480,7 @@
         "other_income_existing_loans_df = other_income.calculate_other_income_existing_loans(\n",
         "    existing_loans=existing_loans,\n",
         "    start_date=start_date,\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         ")\n",
         "other_income_existing_loans_df"
       ]
@@ -6525,7 +6525,7 @@
         "    interest_income_new_disbursements_df=interest_income_new_disbursements_df,\n",
         "    interest_income_existing_loans= interest_income_existing_loans,\n",
         "    start_date= start_date, \n",
-        "    months_to_forecast= MONTHS_TO_FORECAST\n",
+        "    months_to_forecast= months_to_forecast\n",
         ")\n",
         "total_interest_income"
       ]
@@ -6673,7 +6673,7 @@
         "    credit_insurance_fee_existing_loans=other_income_existing_loans_df['credit_insurance_fee_existing_loans'],\n",
         "    credit_insurance_fee_for_all_new_disbursements_df=credit_insurance_fee_for_all_new_disbursements, \n",
         "    start_date=start_date, \n",
-        "    months_to_forecast=MONTHS_TO_FORECAST\n",
+        "    months_to_forecast=months_to_forecast\n",
         ")\n",
         "other_income_df"
       ]
@@ -6827,7 +6827,7 @@
         "depreciations_and_nbvs = depreciation.calculate_depreciations_and_nbvs(\n",
         "    details_of_assets=details_of_assets,\n",
         "    start_date=start_date,\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST\n",
+        "    months_to_forecast=months_to_forecast\n",
         ")\n",
         "depreciations_and_nbvs.keys()"
       ]
@@ -14997,7 +14997,7 @@
         "        new_disbursements_df=new_disbursements_df,\n",
         "        disbursement_parameters=disbursement_parameters,\n",
         "        other_parameters = other_parameters, \n",
-        "        months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "        months_to_forecast=months_to_forecast,\n",
         "        start_date=start_date,\n",
         "    )\n",
         ")\n",
@@ -18618,7 +18618,7 @@
       "source": [
         "income_statement_df = income_statement.generate_income_statement_template(\n",
         "    start_date=start_date,\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         ")\n",
         "income_statement_df"
       ]
@@ -19143,7 +19143,7 @@
         "    expenses_uncertain=expenses_uncertain,\n",
         "    other_parameters=other_parameters,\n",
         "    start_date=start_date,\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         ")\n",
         "uncertain_expenses"
       ]
@@ -19191,7 +19191,7 @@
         "            opening_balances[\"PROVISION_FOR_CREDIT_LOSS\"].iat[0]\n",
         "        ),\n",
         "        start_date=start_date, \n",
-        "        months_to_forecast=MONTHS_TO_FORECAST\n",
+        "        months_to_forecast=months_to_forecast\n",
         "    )\n",
         ")\n",
         "\n",
@@ -28254,7 +28254,7 @@
       ],
       "source": [
         "direct_cashflow_df = direct_cashflow.generate_direct_cashflow_template(\n",
-        "    start_date=start_date, months_to_forecast=MONTHS_TO_FORECAST\n",
+        "    start_date=start_date, months_to_forecast=months_to_forecast\n",
         ")\n",
         "\n",
         "direct_cashflow_df"
@@ -29166,7 +29166,7 @@
         "    taxation=income_statement_df.loc[\"Taxation\"],\n",
         "    opening_balance=opening_balances[\"DEFERED_TAXATION\"].iat[0],\n",
         "    start_date=start_date,\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         ")\n",
         "\n",
         "tax_schedule"
@@ -29932,7 +29932,7 @@
         "capital_expenses = direct_cashflow.calculate_capital_expenses(\n",
         "    details_of_assets=details_of_assets,\n",
         "    start_date=start_date,\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         ")\n",
         "\n",
         "capital_expenses"
@@ -30096,7 +30096,7 @@
         "        details_of_long_term_borrowing=details_of_long_term_borrowing,\n",
         "        details_of_short_term_borrowing=details_of_short_term_borrowing,\n",
         "        start_date=start_date,\n",
-        "        months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "        months_to_forecast=months_to_forecast,\n",
         "    )\n",
         ")\n",
         "\n",
@@ -30883,7 +30883,7 @@
         "    , capital_repayment_new_disbursements_df['total']]\n",
         ")\n",
         "\n",
-        "capital_repayment.loc[helper.generate_columns(start_date,MONTHS_TO_FORECAST)]"
+        "capital_repayment.loc[helper.generate_columns(start_date,months_to_forecast)]"
       ]
     },
     {
@@ -37103,7 +37103,7 @@
       ],
       "source": [
         "loan_book_df = loan_book.generate_loan_book_template(\n",
-        "    start_date=start_date, months_to_forecast=MONTHS_TO_FORECAST\n",
+        "    start_date=start_date, months_to_forecast=months_to_forecast\n",
         ")\n",
         "loan_book_df"
       ]
@@ -37145,7 +37145,7 @@
       ],
       "source": [
         "capital_repayment_existing_loans = existing_loans_schedules['capital_repayments'].sum()\n",
-        "capital_repayment_existing_loans.loc[helper.generate_columns(start_date,MONTHS_TO_FORECAST)]"
+        "capital_repayment_existing_loans.loc[helper.generate_columns(start_date,months_to_forecast)]"
       ]
     },
     {
@@ -37181,7 +37181,7 @@
         "    capital_repayments_new_disbursements_df = capital_repayment_new_disbursements_df,\n",
         "    capital_repayments_existing_loans = capital_repayment_existing_loans,\n",
         "    start_date = start_date,\n",
-        "    months_to_forecast = MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast = months_to_forecast,\n",
         ")\n",
         "\n",
         "total_capital_repayments"
@@ -38369,7 +38369,7 @@
       "source": [
         "balance_sheet_df = balance_sheet.generate_balance_sheet_template(\n",
         "    start_date=start_date,\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         ")\n",
         "\n",
         "balance_sheet_df"
@@ -39554,7 +39554,7 @@
         "    capital_repayment_on_borrowings_df=short_term_borrowings_schedules['capital_repayments'].sum(),\n",
         "    opening_balances=opening_balances,\n",
         "    start_date=start_date, \n",
-        "    months_to_forecast=MONTHS_TO_FORECAST\n",
+        "    months_to_forecast=months_to_forecast\n",
         ")\n",
         "\n",
         "short_term_loans_schedules"
@@ -41578,7 +41578,7 @@
         "    capital_repayment_on_borrowings_df=long_term_borrowings_schedules['capital_repayments'].sum(),\n",
         "    opening_balances=opening_balances,\n",
         "    start_date=start_date, \n",
-        "    months_to_forecast=MONTHS_TO_FORECAST\n",
+        "    months_to_forecast=months_to_forecast\n",
         ")\n",
         "\n",
         "long_term_loans_schedules"
@@ -42601,7 +42601,7 @@
         "    opening_receivables=opening_balances[\"TRADE_RECEIVABLES\"].iat[0],\n",
         "    receipts_from_receivables=other_parameters.loc[\"RECEIPTS_FROM_TRADE_RECEIVABLES\"],\n",
         "    new_receivables=other_parameters.loc[\"NEW_TRADE_RECEIVABLES\"],\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         "    start_date=start_date,\n",
         ")\n",
         "\n",
@@ -42609,7 +42609,7 @@
         "    opening_receivables=opening_balances[\"OTHER_RECEIVABLES\"].iat[0],\n",
         "    receipts_from_receivables=other_parameters.loc[\"RECEIPTS_FROM_OTHER_RECEIVABLES\"],\n",
         "    new_receivables=other_parameters.loc[\"NEW_OTHER_RECEIVABLES\"],\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         "    start_date=start_date,\n",
         ")\n",
         "\n",
@@ -42617,7 +42617,7 @@
         "    opening_receivables=opening_balances[\"INTERGROUP_RECEIVABLES\"].iat[0],\n",
         "    receipts_from_receivables=other_parameters.loc[\"RECEIPTS_FROM_INTERGROUP_RECEIVABLES\"],\n",
         "    new_receivables=other_parameters.loc[\"NEW_INTERGROUP_RECEIVABLES\"],\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         "    start_date=start_date,\n",
         ")\n",
         "\n",
@@ -42625,7 +42625,7 @@
         "    opening_payables=opening_balances[\"TRADE_PAYABLES\"].iat[0],\n",
         "    payments_to_payables=other_parameters.loc[\"PAYMENTS_TO_TRADE_PAYABLES\"],\n",
         "    new_payables=other_parameters.loc[\"NEW_TRADE_PAYABLES\"],\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         "    start_date=start_date,\n",
         ")\n",
         "\n",
@@ -42633,7 +42633,7 @@
         "    opening_payables=opening_balances[\"OTHER_PAYABLES\"].iat[0],\n",
         "    payments_to_payables=other_parameters.loc[\"PAYMENTS_TO_OTHER_PAYABLES\"],\n",
         "    new_payables=other_parameters.loc[\"NEW_OTHER_PAYABLES\"],\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         "    start_date=start_date,\n",
         ")\n",
         "\n",
@@ -42796,7 +42796,7 @@
         "    new_inventories=other_parameters.loc[\"NEW_INVENTORY\"],\n",
         "    inventories_used=other_parameters.loc[\"INVENTORY_USED\"],\n",
         "    start_date=start_date,\n",
-        "    months_to_forecast=MONTHS_TO_FORECAST,\n",
+        "    months_to_forecast=months_to_forecast,\n",
         ")\n",
         "\n",
         "inventories_schedule"
@@ -44933,7 +44933,7 @@
       "source": [
         "statement_of_cashflow_df = (\n",
         "    statement_of_cashflows.generate_statement_of_cashflow_template(\n",
-        "        start_date, MONTHS_TO_FORECAST\n",
+        "        start_date, months_to_forecast\n",
         "    )\n",
         ")"
       ]
