chore: change names of the endpoint to make them more meaningful

--- a/notebook_aws.ipynb
+++ b/notebook_aws.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -15,6 +15,9 @@
         "from application.modeling.constants import MY_SESSION, S3_CLIENT, FileStage\n",
         "from decouple import config\n",
         "from application.utils import schemas\n",
+        "from application.routes.projects import crud\n",
+        "from application.utils.database import SessionLocal\n",
+        "from application.utils import models\n",
         "\n",
         "import jwt\n",
         "\n",
@@ -22,87 +25,6 @@
         "pd.options.display.max_rows = 100\n",
         "pd.options.display.float_format = \"{:,.2f}\".format"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'{\"title\": \"ProjectResponse\", \"type\": \"object\", \"properties\": {\"project_name\": {\"title\": \"Project Name\", \"type\": \"string\"}, \"description\": {\"title\": \"Description\", \"type\": \"string\"}, \"start_date\": {\"title\": \"Start Date\", \"type\": \"string\", \"format\": \"date\"}, \"months_to_forecast\": {\"title\": \"Months To Forecast\", \"type\": \"integer\"}, \"imtt\": {\"title\": \"Imtt\", \"type\": \"number\"}, \"tenant_id\": {\"title\": \"Tenant Id\", \"type\": \"integer\"}, \"project_id\": {\"title\": \"Project Id\", \"type\": \"integer\"}, \"user_id\": {\"title\": \"User Id\", \"type\": \"integer\"}, \"project_status\": {\"title\": \"Project Status\", \"type\": \"string\"}, \"create_at\": {\"title\": \"Create At\", \"type\": \"string\", \"format\": \"date-time\"}, \"updated_at\": {\"title\": \"Updated At\", \"type\": \"string\", \"format\": \"date-time\"}}, \"required\": [\"project_name\", \"description\", \"start_date\", \"months_to_forecast\", \"imtt\", \"tenant_id\", \"project_id\", \"user_id\", \"project_status\", \"create_at\", \"updated_at\"]}'"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "schemas.ProjectResponse.schema_json()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "JWT_SECRET = os.getenv(\"secret\")\n",
-        "JWT_ALGORITHM = os.getenv(\"algorithm\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "credentials = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoyLCJlbWFpbCI6ImN0aXppcmFpMkBnbWFpbC5jb20iLCJleHBpcmVzIjoxNjk3MDE3NTQ3LjY5NzY0ODN9.LrlBnJzxpw3CfCr5haDMq-XpvZZhr58TvlQ40i76m4A\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "{'user_id': 2, 'email': 'ctizirai2@gmail.com', 'expires': 1697017547.6976483}"
-            ]
-          },
-          "execution_count": 14,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "payload = jwt.decode(\n",
-        "                        credentials, JWT_SECRET, algorithms=[JWT_ALGORITHM]\n",
-        "                    )\n",
-        "\n",
-        "payload"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'ctizirai2@gmail.com'"
-            ]
-          },
-          "execution_count": 9,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": []
     },
     {
       "cell_type": "code",
