--- a/notebook_model.ipynb
+++ b/notebook_model.ipynb
@@ -49,7 +49,7 @@
       "source": [
         "start_date = \"2023-01\"\n",
         "months_to_forecast = 12\n",
-        "IMTT = 0.01"
+        "imtt = 0.01"
       ]
     },
     {
@@ -35206,7 +35206,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### **Calculate IMTT (2% Tax)**"
+        "### **Calculate imtt (2% Tax)**"
       ]
     },
     {
@@ -35215,7 +35215,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "income_statement_df.loc['2% Taxation']  = -direct_cashflow_df.loc['Total Cash Outflows']*IMTT"
+        "income_statement_df.loc['2% Taxation']  = -direct_cashflow_df.loc['Total Cash Outflows']*imtt"
       ]
     },
     {
