fix: making initial changes to calculation to meet new data

--- a/notebook_aws.ipynb
+++ b/notebook_aws.ipynb
@@ -33,56 +33,7 @@
       "source": [
         "bucket_name = \"claxon-actuaries-budgeting\"\n",
         "tenant_name = bucket_name\n",
-        "project_id = 21\n",
-        "# start_date = \"2023-01\"\n",
-        "# months_to_forecast = 12"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['copy_objects',\n",
-              " 'delete_objects',\n",
-              " 'describe_objects',\n",
-              " 'does_object_exist',\n",
-              " 'download',\n",
-              " 'get_bucket_region',\n",
-              " 'list_buckets',\n",
-              " 'list_directories',\n",
-              " 'list_objects',\n",
-              " 'merge_datasets',\n",
-              " 'merge_upsert_table',\n",
-              " 'read_csv',\n",
-              " 'read_excel',\n",
-              " 'read_fwf',\n",
-              " 'read_json',\n",
-              " 'read_parquet',\n",
-              " 'read_parquet_metadata',\n",
-              " 'read_parquet_table',\n",
-              " 'select_query',\n",
-              " 'size_objects',\n",
-              " 'store_parquet_metadata',\n",
-              " 'to_csv',\n",
-              " 'to_excel',\n",
-              " 'to_json',\n",
-              " 'to_parquet',\n",
-              " 'upload',\n",
-              " 'wait_objects_exist',\n",
-              " 'wait_objects_not_exist']"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "[i for i in dir( wr.s3) if not i.startswith('_') ]"
+        "project_id = 21"
       ]
     },
     {
