--- a/notebook_aws.ipynb
+++ b/notebook_aws.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -55,22 +55,22 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>31/12/2022</td>\n",
-              "      <td>ZIMNAT LIFE ASSURANCE</td>\n",
-              "      <td>376,455.00</td>\n",
-              "      <td>0.06</td>\n",
-              "      <td>60</td>\n",
-              "      <td>Monthly (P+I)</td>\n",
-              "      <td>12</td>\n",
-              "      <td>reducing_balance</td>\n",
+              "      <td>24/04/2023</td>\n",
+              "      <td>FCB</td>\n",
+              "      <td>120,383.84</td>\n",
+              "      <td>0.18</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Bullet (P+I)</td>\n",
+              "      <td>0</td>\n",
+              "      <td>straight_line</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>06/05/2022</td>\n",
-              "      <td>MASAWARA</td>\n",
-              "      <td>5,613.00</td>\n",
-              "      <td>0.06</td>\n",
-              "      <td>60</td>\n",
+              "      <td>02/03/2023</td>\n",
+              "      <td>ZIMNAT LIFE ASSURANCE</td>\n",
+              "      <td>50,000.00</td>\n",
+              "      <td>0.14</td>\n",
+              "      <td>6</td>\n",
               "      <td>Monthly (P+I)</td>\n",
               "      <td>12</td>\n",
               "      <td>reducing_balance</td>\n",
@@ -78,99 +78,110 @@
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>31/12/2022</td>\n",
-              "      <td>Grandre</td>\n",
-              "      <td>160,000.00</td>\n",
-              "      <td>0.06</td>\n",
-              "      <td>36</td>\n",
-              "      <td>Quaterly (I+Bullet P)</td>\n",
-              "      <td>4</td>\n",
-              "      <td>straight_line</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>31/12/2022</td>\n",
-              "      <td>MINERVA</td>\n",
-              "      <td>15,000.00</td>\n",
+              "      <td>Zimnat Life Assurance</td>\n",
+              "      <td>20,000.00</td>\n",
               "      <td>0.08</td>\n",
-              "      <td>36</td>\n",
-              "      <td>Bullet (P+I)</td>\n",
-              "      <td>0</td>\n",
-              "      <td>straight_line</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>10/09/2022</td>\n",
-              "      <td>ZAM-CARGO</td>\n",
-              "      <td>364,000.00</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>36</td>\n",
-              "      <td>Annually(I) Principal rollover</td>\n",
-              "      <td>12</td>\n",
-              "      <td>straight_line</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>05/04/2023</td>\n",
-              "      <td>ZIMNAT LIFE ASSURANCE</td>\n",
-              "      <td>30,000.00</td>\n",
-              "      <td>0.14</td>\n",
-              "      <td>24</td>\n",
-              "      <td>Monthly (P+I)</td>\n",
-              "      <td>12</td>\n",
-              "      <td>reducing_balance</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>31/12/2022</td>\n",
-              "      <td>ZLA-Cargo</td>\n",
-              "      <td>124,575.00</td>\n",
-              "      <td>0.10</td>\n",
               "      <td>12</td>\n",
               "      <td>Annually(I) Principal rollover</td>\n",
               "      <td>1</td>\n",
               "      <td>straight_line</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>7</th>\n",
+              "      <th>3</th>\n",
               "      <td>31/12/2022</td>\n",
-              "      <td>ZIMNAT LION INSURANCE</td>\n",
-              "      <td>50,000.00</td>\n",
-              "      <td>0.08</td>\n",
+              "      <td>Grandre</td>\n",
+              "      <td>100,000.00</td>\n",
+              "      <td>0.12</td>\n",
               "      <td>12</td>\n",
-              "      <td>Bi-annual(I)Principal at maturity</td>\n",
-              "      <td>2</td>\n",
+              "      <td>Quaterly (I+Bullet P)</td>\n",
+              "      <td>4</td>\n",
+              "      <td>straight_line</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>23/04/2023</td>\n",
+              "      <td>FCB</td>\n",
+              "      <td>18,429.93</td>\n",
+              "      <td>1.50</td>\n",
+              "      <td>12</td>\n",
+              "      <td>Bullet (P+I)</td>\n",
+              "      <td>0</td>\n",
+              "      <td>straight_line</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>17/12/2022</td>\n",
+              "      <td>NURTURE</td>\n",
+              "      <td>500,000.00</td>\n",
+              "      <td>0.20</td>\n",
+              "      <td>12</td>\n",
+              "      <td>Quaterly (I+Bullet P)</td>\n",
+              "      <td>4</td>\n",
+              "      <td>straight_line</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>26/01/2023</td>\n",
+              "      <td>NMB</td>\n",
+              "      <td>450,000.00</td>\n",
+              "      <td>0.18</td>\n",
+              "      <td>12</td>\n",
+              "      <td>Quaterly (I+Bullet P)</td>\n",
+              "      <td>4</td>\n",
+              "      <td>straight_line</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>24/03/2023</td>\n",
+              "      <td>DANDEMUTANDE</td>\n",
+              "      <td>25,000.00</td>\n",
+              "      <td>0.06</td>\n",
+              "      <td>12</td>\n",
+              "      <td>Bullet (P+I)</td>\n",
+              "      <td>0</td>\n",
               "      <td>straight_line</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
-              "      <td>31/12/2022</td>\n",
-              "      <td>ZIMNAT LION INSURANCE</td>\n",
-              "      <td>92,800.00</td>\n",
-              "      <td>0.06</td>\n",
-              "      <td>12</td>\n",
-              "      <td>Bi-annual(I)Principal at maturity</td>\n",
-              "      <td>2</td>\n",
+              "      <td>30/11/2023</td>\n",
+              "      <td>KALTECH</td>\n",
+              "      <td>6,000,000.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>24</td>\n",
+              "      <td>Bullet</td>\n",
+              "      <td>1</td>\n",
               "      <td>straight_line</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
-              "      <td>29/03/2023</td>\n",
-              "      <td>BERAMASAMBA</td>\n",
-              "      <td>30,000.00</td>\n",
-              "      <td>0.06</td>\n",
-              "      <td>12</td>\n",
-              "      <td>Bi-annual(I)Principal at maturity</td>\n",
-              "      <td>2</td>\n",
+              "      <td>01/12/2023</td>\n",
+              "      <td>KARL TECH</td>\n",
+              "      <td>6,000,000.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>24</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "      <td>straight_line</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>10</th>\n",
-              "      <td>31/10/2023</td>\n",
-              "      <td>CARLOS_FINANCE</td>\n",
+              "      <td>10/11/2023</td>\n",
+              "      <td>KARL LIFE</td>\n",
               "      <td>10,000.00</td>\n",
-              "      <td>0.10</td>\n",
-              "      <td>6</td>\n",
-              "      <td>Bullet (P+I)</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>12</td>\n",
+              "      <td>Bullet Monthly</td>\n",
+              "      <td>0</td>\n",
+              "      <td>straight_line</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>01/01/2024</td>\n",
+              "      <td>TESTING WITH DOCS</td>\n",
+              "      <td>10,000.00</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>12</td>\n",
+              "      <td>Something Something</td>\n",
               "      <td>12</td>\n",
               "      <td>straight_line</td>\n",
               "    </tr>\n",
@@ -180,42 +191,44 @@
             ],
             "text/plain": [
               "   effective_date             institution  nominal_amount  interest_rate  \\\n",
-              "0      31/12/2022   ZIMNAT LIFE ASSURANCE      376,455.00           0.06   \n",
-              "1      06/05/2022               MASAWARA         5,613.00           0.06   \n",
-              "2      31/12/2022                 Grandre      160,000.00           0.06   \n",
-              "3      31/12/2022                 MINERVA       15,000.00           0.08   \n",
-              "4      10/09/2022               ZAM-CARGO      364,000.00           0.05   \n",
-              "5      05/04/2023  ZIMNAT LIFE ASSURANCE        30,000.00           0.14   \n",
-              "6      31/12/2022               ZLA-Cargo      124,575.00           0.10   \n",
-              "7      31/12/2022   ZIMNAT LION INSURANCE       50,000.00           0.08   \n",
-              "8      31/12/2022   ZIMNAT LION INSURANCE       92,800.00           0.06   \n",
-              "9      29/03/2023             BERAMASAMBA       30,000.00           0.06   \n",
-              "10     31/10/2023          CARLOS_FINANCE       10,000.00           0.10   \n",
+              "0      24/04/2023                     FCB      120,383.84           0.18   \n",
+              "1      02/03/2023  ZIMNAT LIFE ASSURANCE        50,000.00           0.14   \n",
+              "2      31/12/2022   Zimnat Life Assurance       20,000.00           0.08   \n",
+              "3      31/12/2022                 Grandre      100,000.00           0.12   \n",
+              "4      23/04/2023                     FCB       18,429.93           1.50   \n",
+              "5      17/12/2022                 NURTURE      500,000.00           0.20   \n",
+              "6      26/01/2023                    NMB       450,000.00           0.18   \n",
+              "7      24/03/2023            DANDEMUTANDE       25,000.00           0.06   \n",
+              "8      30/11/2023                 KALTECH    6,000,000.00           0.00   \n",
+              "9      01/12/2023               KARL TECH    6,000,000.00           0.00   \n",
+              "10     10/11/2023               KARL LIFE       10,000.00           0.00   \n",
+              "11     01/01/2024       TESTING WITH DOCS       10,000.00           0.01   \n",
               "\n",
-              "    tenure                  repayment_frequency  frequency            method  \n",
-              "0       60                       Monthly (P+I)          12  reducing_balance  \n",
-              "1       60                       Monthly (P+I)          12  reducing_balance  \n",
-              "2       36               Quaterly (I+Bullet P)           4     straight_line  \n",
-              "3       36                        Bullet (P+I)           0     straight_line  \n",
-              "4       36      Annually(I) Principal rollover          12     straight_line  \n",
-              "5       24                       Monthly (P+I)          12  reducing_balance  \n",
-              "6       12      Annually(I) Principal rollover           1     straight_line  \n",
-              "7       12   Bi-annual(I)Principal at maturity           2     straight_line  \n",
-              "8       12   Bi-annual(I)Principal at maturity           2     straight_line  \n",
-              "9       12   Bi-annual(I)Principal at maturity           2     straight_line  \n",
-              "10       6                         Bullet (P+I)         12     straight_line  "
+              "    tenure               repayment_frequency  frequency            method  \n",
+              "0        3                     Bullet (P+I)           0     straight_line  \n",
+              "1        6                    Monthly (P+I)          12  reducing_balance  \n",
+              "2       12   Annually(I) Principal rollover           1     straight_line  \n",
+              "3       12            Quaterly (I+Bullet P)           4     straight_line  \n",
+              "4       12                     Bullet (P+I)           0     straight_line  \n",
+              "5       12            Quaterly (I+Bullet P)           4     straight_line  \n",
+              "6       12            Quaterly (I+Bullet P)           4     straight_line  \n",
+              "7       12                     Bullet (P+I)           0     straight_line  \n",
+              "8       24                            Bullet          1     straight_line  \n",
+              "9       24                                 0          1     straight_line  \n",
+              "10      12                    Bullet Monthly          0     straight_line  \n",
+              "11      12               Something Something         12     straight_line  "
             ]
           },
-          "execution_count": 12,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "bucket_name = \"carlos-test-budgeting\"\n",
-        "project_id = 1\n",
+        "bucket_name = \"claxon-actuaries-budgeting\"\n",
+        "project_id = 65\n",
         "file_stage = constants.FileStage.raw\n",
-        "file_name = constants.RawFiles.details_of_long_term_borrowing\n",
+        "file_name = constants.RawFiles.details_of_short_term_borrowing\n",
         "df = wr.s3.read_parquet(\n",
         "    f\"s3://{bucket_name}/project_{project_id}/{file_stage.value}/{file_name.value}.parquet\",\n",
         "    boto3_session=MY_SESSION,\n",
